Fix close button on mobile

--- a/src/components/Sidebar/sidebar.scss
+++ b/src/components/Sidebar/sidebar.scss
@@ -234,7 +234,7 @@ $light_maroon: #bb1a35;
 		height: 100vh;
 		margin: 0;
     z-index: 200;
-    grid-template-rows: minmax(80vh, 80vh) minmax(20vh, 20vh);
+    grid-template-rows: minmax(7vh, 7vh) minmax(73vh, 73vh) minmax(20vh, 20vh);
   }
 
   .sidebar{
@@ -244,8 +244,9 @@ $light_maroon: #bb1a35;
   .close-sidebar{
     font-size: 1.8em;
     display: block;
-    padding-top: 0.3em;
-    padding-left: 0.5em;
+    padding: 0.5em;
+    background-color: $lighter_grey;
+    color: white;
 
     .fa-times:hover{
       color: $light_maroon;
